2008-08-25  Juri Linkov  <juri@jurta.org>

	* textmodes/text-mode.el (text-mode-map): Unbind "\es" from
	`center-line' and "\eS" from `center-paragraph'.
	(facemenu-keymap): Bind "\es" to `center-line' and "\eS" to
	`center-paragraph'.

2008-08-25  Ulf Jasper  <ulf@web.de>

	* net/newst-treeview.el (newsticker-treeview-own-frame): Doc
	fixed.
	(newsticker-treeview-treewindow-width): New.
	(newsticker-treeview-listwindow-height): New.
	(newsticker-treeview-browse-url-item): New.
	(newsticker-treeview-mode-map): Added
	newsticker-treeview-browse-url-item.
	(newsticker--treeview-window-init): Use
	newsticker-treeview-treewindow-width and
	newsticker-treeview-listwindow-height.

	* net/newst-reader.el (newsticker-browse-url-item): New.

2008-08-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (vc-dir-marked-only-files-and-states):
	(vc-dir-child-files-and-states): Reverse the list before returning it.

2008-08-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-introspect): Use `dbus-call-method-non-blocking'.

2008-08-24  Romain Francoise  <romain@orebokech.com>

	* progmodes/python.el (run-python): Remove '' from sys.path.

2008-08-23  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-tab-mode-string)
	(fortran-comment-line-start, fortran-continuation-string): Doc fixes.

2008-08-23  Eli Zaretskii  <eliz@gnu.org>

	* term/pc-win.el (msdos-setup-keyboard) <msdos-setup-keyboard>:
	Add declare-function.

	* startup.el (command-line): Don't call tty-register-default-colors
	if initial-window-system is `pc'.

	* term/internal.el (local-function-key-map): Fix unbalanced parens.
	(msdos-key-remapping-map): New variable.  Move
	here all the special keys we will be remapping via
	local-function-key-map.
	(msdos-setup-keyboard): New function.

	* term/pc-win.el (msdos-create-frame-with-faces): Renamed from
	make-msdos-frame.
	(terminal-init-internal): New function, errors out if called.
	(msdos-initialize-window-system): New function.